# AAIP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  LICENSE  QUICKSTART.md  README.md  SPEC.md  alembic.ini  dashboard.html  demo_aep.py  demo_two_agent.py  temp.txt
.github/workflows/: ci.yml
aaip/: __init__.py  ui.py
aaip/aep/: __init__.py  config.py  core.py  crypto.py  exceptions.py  secrets.py  utils.py
aaip/aep/adapters/: __init__.py  anchor_chain.py  base.py  credits.py  evm.py  mock.py  solana.py
aaip/api/: __init__.py  auth.py  server.py  webhooks.py
aaip/engine/: __init__.py  billing.py  execution_engine.py  payment_manager.py  queue.py  reconciliation.py  task_router.py
aaip/schemas/: __init__.py  agent_types.py  economics.py  export.py  models.py  validator_types.py
aaip/storage/: __init__.py  db.py
backend/: .env.example  Dockerfile  auth.py  benchmark_datasets.py  cav.py  consensus.py  custom_judges.py  database.py  discovery.py  evaluation.py  judges.py  main.py  oracle.py  payments.py  poe.py  pyproject.toml  registry.py  reputation.py  requirements.txt  retrieval.py  shadow.py  tasks.py  traces.py  tracing.py
backend/routers/: __init__.py  agents.py  cav.py  payments.py  poe.py  validators.py
contracts/: PoEAnchor.sol  abi.json  deploy.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  PAYMENTS.md  POE.md  ROADMAP.md  aaip-spec.md  example.aaip.json  security.md
examples/: README.md  fraud_detection.py
examples/crewai/: README.md  crew.py
examples/langchain/: README.md  agent.py
examples/openai_agents/: README.md  agent.py
examples/openclaw/: README.md  agent.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
migrations/: env.py
migrations/versions/: 0001_initial_aaip.py  0002_cav_shadow.py
research/: README.md  cav_paper.docx  poe_paper.docx
sdk/go/: go.mod
sdk/go/aaip/: client.go  client_test.go
sdk/java/: pom.xml
sdk/java/src/main/java/dev/aaip/: AAIPClient.java
sdk/java/src/test/java/dev/aaip/: AAIPClientTest.java
sdk/python/: pyproject.toml
sdk/python/aaip/: __init__.py  client.py  exceptions.py  models.py  quick.py
sdk/python/aaip/adapters/: __init__.py  autogpt.py  crewai.py  langchain.py  openai_agents.py
sdk/python/aaip/cli/: __init__.py  _shared.py  explorer.py  identity.py  leaderboard.py  run.py  simulate.py
sdk/python/aaip/identity/: __init__.py  _encryption.py
sdk/python/aaip/poe/: __init__.py  deterministic.py
sdk/python/aaip/validators/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/tests/: basic.test.ts
sim_results/collusion/: result.json
simulation_lab/: README.md  aaip_lab.py  aaip_sim.py  pyproject.toml
simulation_lab/attacks/: adversarial_task_attack.py  ai_judge_bias_attack.py  bribery_attack.py  collusion_attack.py  spam_attack.py  sybil_attack.py
simulation_lab/datasets/: benchmark_tasks.json
simulation_lab/economics/: reward_model.py
simulation_lab/engine/: event_loop.py  scheduler.py  simulation_engine.py
simulation_lab/metrics/: metrics_collector.py
simulation_lab/scenarios/: adversarial_scenario.py  all_scenarios.py  baseline_scenario.py  bribery_scenario.py  collusion_scenario.py  mixed_attack_scenario.py  spam_scenario.py  sybil_scenario.py
simulation_lab/simulation/: __init__.py  agents.py  cav_simulation.py  core.py  economics.py  engine.py  metrics.py  poe_simulation.py  reputation.py  scenarios.py  tasks.py  validation.py  validators.py  watchers.py
simulation_lab/tests/: test_simulation.py
tests/: conftest.py  test_aep.py  test_identity_poe_validators.py  test_onchain_anchor.py  test_sdk.py  test_two_agent.py
tests/backend/: conftest.py  test_backend.py
