[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "aaip-backend"
version         = "1.0.0"
description     = "AAIP Backend — FastAPI server for agent registry, evaluation, and CAV"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",
    "celery[redis]>=5.4.0",
    "redis>=5.0.1",
    "openai>=1.12.0",
    "numpy>=1.26.3",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aiosqlite>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501",
    "E701",
    "E702",
    "F401",
    "F541",
]
