[package]
name = "aaip"
version = "1.0.0"
edition = "2021"
description = "Autonomous Agent Infrastructure Protocol — Rust SDK"
license = "MIT"
repository = "https://github.com/aaip-protocol/aaip-rust"
homepage = "https://aaip.dev"
keywords = ["ai", "agents", "protocol", "identity", "aaip"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
